--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@styled-icons/feather": "^10.34.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-animations": "^1.0.0",
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
