--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "portfolio",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@styled-icons/feather": "^10.34.0",
-    "react": "^17.0.2",
-    "react-animations": "^1.0.0",
-    "react-dom": "^17.0.2",
-    "styled-components": "^5.3.5"
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
-    "@vitejs/plugin-react": "^1.0.7",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.0"
-  }
+	"name": "portfolio",
+	"private": true,
+	"version": "0.0.0",
+	"homepage": "github-page/",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@styled-icons/feather": "^10.34.0",
+		"react": "^17.0.2",
+		"react-animations": "^1.0.0",
+		"react-dom": "^17.0.2",
+		"styled-components": "^5.3.5"
+	},
+	"devDependencies": {
+		"@types/react": "^17.0.33",
+		"@types/react-dom": "^17.0.10",
+		"@vitejs/plugin-react": "^1.0.7",
+		"typescript": "^4.5.4",
+		"vite": "^2.9.0"
+	}
 }
