--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
 		"react": "^17.0.2",
 		"react-animations": "^1.0.0",
 		"react-dom": "^17.0.2",
+		"react-router-dom": "6",
 		"styled-components": "^5.3.5"
 	},
 	"devDependencies": {
 		"@types/react": "^17.0.33",
+		"@types/react-animations": "^1.0.0",
 		"@types/react-dom": "^17.0.10",
+		"@types/styled-components": "^5.1.24",
 		"@vitejs/plugin-react": "^1.0.7",
+		"babel-plugin-styled-components": "^2.0.6",
 		"typescript": "^4.5.4",
 		"vite": "^2.9.0"
 	}
